# trading-bots-back

./: .env.example  .gitignore  CLAUDE.md  migrate_v02_nuke.sql  pyproject.toml  requirements.txt  schema.sql
app/: auth.py  config.py  database.py  main.py  websocket_manager.py
app/adk/: loop.py  pipeline.py  session.py
app/adk/agents/: data_ingestion.py  execution.py  feature_calc.py  llm_reasoner.py  persistence.py  risk_check.py  strategy_eval.py
app/api/: agents.py  auth.py  market.py  signals.py  trades.py  ws.py
app/models/: __init__.py  tables.py
app/schemas/: schemas.py
app/services/: exchange.py  execution_engine.py  feature_engine.py  portfolio_manager.py  risk_manager.py  strategy_engine.py
app/services/indicators/: __init__.py  base.py  levels.py  momentum.py  moving_averages.py  trend.py  volatility.py  volume.py
app/services/rl/: __init__.py  feature_discretizer.py  model_store.py  q_learning.py  trainer.py
app/services/strategies/: __init__.py  adx_trend.py  base.py  bollinger_strategy.py  ema_crossover.py  fibonacci_levels.py  macd_strategy.py  parabolic_sar.py  stochastic_strategy.py  volume_confirmation.py
